--- a/project7/static/css/style.css
+++ b/project7/static/css/style.css
@@ -4,6 +4,9 @@
     font-weight: 900;
     text-transform: uppercase;
     font-family: 'Darumadrop One', cursive;
+    background:linear-gradient(to bottom right,rgb(74, 74, 255), purple,pink,white);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 .btn-group{
     text-align: justify;
@@ -22,15 +25,32 @@ a{
     font-size: 40px;
     text-align: center;
     text-transform: capitalize;
+    background:linear-gradient(rgb(74, 74, 255),violet,indigo,blue );
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 .b{
     text-align: center;
     text-transform: capitalize;
+    background:linear-gradient(to bottom right,violet,blue, indigo,pink );
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 .c{
     text-align: center;
-    text-transform: capitalize;
+    text-transform: uppercase;
+    color: violet;
+    letter-spacing: 4px;
 }
 .d{
     text-transform:capitalize ;
+}
+.e{
+    text-transform: uppercase;
+    color: violet;
+}
+.f{
+    background-color: indigo;
+    color: white;
+    font-weight: bolder;
 }
