--- a/project7/templates/base.html
+++ b/project7/templates/base.html
@@ -18,10 +18,13 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-   <h1 class="bg-info">__my site__</h1>
+   <h1 class="bg-info">my site</h1>
    <div class="btn-group btn-group-justified" id="y" style="background:white">
         <a href="{% url 'home' %}" class="btn btn-primary">home</a>
         {% if user.is_authenticated %}
+
+        <a href="{% url 'password_change' %}" class="btn btn-primary">change password</a>
+
         <a href="{% url 'logout' %}" class="btn btn-primary">logout</a>
         {% else %}
         <a href="{% url 'signup1' %}" class="btn btn-primary">signup</a>
