--- a/project7/templates/add.html
+++ b/project7/templates/add.html
@@ -1,8 +1,41 @@
-<!--{% extends "base.html" %}
+{% extends "base.html" %}
 {% block body_block %}
-<h1>employ details</h1>
+
+
+
+<h1>Employee details</h1>
 <form method="post">
-    {{form.as_table}}
-    <input type="submit" id="x" value="login"></form>
-{% csrf_token %}
-{% endblock %}-->
+ {% csrf_token %}
+ {{form}}
+ <input type="submit" value="submit">
+</form>
+<!-- <form>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputEmail4">Emp_id</label>
+        <input type="number" class="form-control" id="inputEmail4">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="inputPassword4">Emp_name</label>
+        <input type="text" class="form-control" >
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputAddress">place</label>
+      <input type="text" class="form-control" id="inputAddress">
+    </div>
+    <div class="form-group">
+      <label for="inputAddress2">company_name</label>
+      <input type="text" class="form-control" id="inputAddress2" >
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputCity">salary</label>
+        <input type="text" class="form-control" id="inputCity">
+      </div>
+    </div>
+    <input type="submit" class="btn btn-primary">
+  </form> -->
+
+
+{% endblock %}
