--- a/project7/templates/view.html
+++ b/project7/templates/view.html
@@ -1,15 +1,26 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{%static 'css/style.css' %}">
-</head>
-<body>
 
-    
-</body>
-</html>
+{% extends "base.html" %}
+{% block body_block %}
+<h1>view employee</h1>
+<table>
+    <tr>
+        <th>Employee id</th>
+        <th>Employee name</th>
+        <th>Employee address</th>
+        <th>place</th>
+        <th>Employee salary</th>
+
+    </tr>
+    {% for i in p %}
+    <tr>
+        <td>{{i.Emp_id}}</td>
+        <td>{{i.Emp_name}}</td>
+        <td>{{i.company_name}}</td>
+        <td>{{i.place}}</td>
+        <td>{{i.salary}}</td>
+        <td><a href="{% url 'delete_emp' i.pk %}">Delete</a></td>
+        <td><a href="{% url 'edit_emp' i.pk%}">Edit</a></td>
+    </tr>
+    {% endfor %}
+</table>
+{% endblock %}
